--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -3,6 +3,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+dev = "uvicorn main:create_app --app-dir src --factory --host 0.0.0.0 --port 8080 --reload --no-access-log"
+
 [packages]
 fastapi = "*"
 sqlmodel = "*"
