--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,8 @@ uvicorn = "*"
 structlog = "*"
 pydantic-settings = "*"
 psutil = "*"
+apscheduler = "*"
+httpx = "*"
 
 [dev-packages]
 pytest = "*"
