--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,8 @@ services:
       - DATABASE_CONFIG__ECHO=false
       - LOGGING_CONFIG__JSON_FORMAT=true
       - LOGGING_CONFIG__LIBRARY_LOG_LEVELS={"httpx":"WARNING", "apscheduler.scheduler":"WARNING"}
+    ports:
+      - "8080:8080"
     depends_on:
       postgres:
         condition: service_healthy
@@ -76,6 +78,12 @@ services:
         condition: service_healthy
     ports:
       - "4200:80"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fs http://localhost:80"]
+      interval: 30s
+      timeout: 15s
+      retries: 5
+      start_period: 5s
 
 volumes:
   postgres_data:
