--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     environment:
       - POSTGRES_PASSWORD=1234
+      - TZ=America/Sao_Paulo
     # ports:
     #   - "5432:5432"
     volumes:
@@ -54,6 +55,7 @@ services:
       - DATABASE_CONFIG__ECHO=false
       - LOGGING_CONFIG__JSON_FORMAT=true
       - LOGGING_CONFIG__LIBRARY_LOG_LEVELS={"httpx":"WARNING", "apscheduler.scheduler":"WARNING"}
+      - TZ=America/Sao_Paulo
     ports:
       - "8080:8080"
     depends_on:
@@ -77,6 +79,8 @@ services:
         condition: service_healthy
       status_page_backend:
         condition: service_healthy
+    environment:
+      - TZ=America/Sao_Paulo
     ports:
       - "4200:80"
     healthcheck:
